[package]
name = "mdn-cli"
version = "0.1.0"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
surf = "2.0.0"
urlencoding = "1.1.1"
scraper = "0.12.0"
html2text = "0.2.1"
pager = "0.15.0"
term_size = "0.3.2"

[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]
