[package]
name = "mdn"
version = "0.1.2"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"
description = "A command line tool to search and display documentation from Mozilla Developer Network"
license = "MIT"
repository = "https://github.com/chrisdickinson/mdn-cli"
homepage = "https://github.com/chrisdickinson/mdn-cli"

[dependencies]
anyhow = "1.0.32"
surf = "2.0.0"
urlencoding = "1.1.1"
scraper = "0.12.0"
html2text = "0.2.1"
term_size = "0.3.2"
bat = "0.16.0"

[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]

[target.'cfg(unix)'.dependencies]
pager = "0.15.0"
